--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu.csproj
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -132,6 +133,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\DataClasses1.designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DataClasses1.dbml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -163,9 +169,23 @@
     <Content Include="Content\bootstrap-5.0.2-dist\js\bootstrap.js" />
     <Content Include="Content\bootstrap-5.0.2-dist\js\bootstrap.min.js" />
     <Content Include="Content\HinhAnh\GiaoDien\bell.png" />
+    <Content Include="Content\HinhAnh\GiaoDien\DangNhap.png" />
     <Content Include="Content\HinhAnh\GiaoDien\fb.jpg" />
     <Content Include="Content\HinhAnh\GiaoDien\github.png" />
+    <Content Include="Content\HinhAnh\GiaoDien\iconSidebar\iconDetail.png" />
+    <Content Include="Content\HinhAnh\GiaoDien\iconSidebar\iconSideBar.png" />
+    <Content Include="Content\HinhAnh\GiaoDien\iconSidebar\iconSideBar10.png" />
+    <Content Include="Content\HinhAnh\GiaoDien\iconSidebar\iconSideBar11.png" />
+    <Content Include="Content\HinhAnh\GiaoDien\iconSidebar\iconSideBar3.png" />
+    <Content Include="Content\HinhAnh\GiaoDien\iconSidebar\iconSideBar4.png" />
+    <Content Include="Content\HinhAnh\GiaoDien\iconSidebar\iconSideBar5.png" />
+    <Content Include="Content\HinhAnh\GiaoDien\iconSidebar\iconSideBar6.png" />
+    <Content Include="Content\HinhAnh\GiaoDien\iconSidebar\iconSideBar7.png" />
+    <Content Include="Content\HinhAnh\GiaoDien\iconSidebar\iconSidebar8.png" />
+    <Content Include="Content\HinhAnh\GiaoDien\iconSidebar\iconSideBar9.png" />
     <Content Include="Content\HinhAnh\GiaoDien\linkedin.jpg" />
+    <Content Include="Content\HinhAnh\GiaoDien\QuanTriVienJS.js" />
+    <Content Include="Content\HinhAnh\GiaoDien\QuanTriVienStyle.css" />
     <Content Include="Content\HinhAnh\GiaoDien\twitter.png" />
     <Content Include="Content\HinhAnh\GiaoDien\user.png" />
     <Content Include="Content\HinhAnh\GiaoDien\yola-english-high-resolution-logo.png" />
@@ -249,6 +269,11 @@
     <Content Include="Content\bootstrap-5.0.2-dist\js\bootstrap.js.map" />
     <Content Include="Content\bootstrap-5.0.2-dist\js\bootstrap.min.js.map" />
     <Content Include="Content\HinhAnh\BaiTap\Chuong 4_Bao mat va an toan du lieu_Full.pdf" />
+    <Content Include="Models\DataClasses1.dbml">
+      <Generator>MSLinqToSQLGenerator</Generator>
+      <LastGenOutput>DataClasses1.designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
@@ -276,6 +301,9 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\Shared\_LayoutQuanTriVien.cshtml" />
+    <Content Include="Views\QuanTriVien\Index.cshtml" />
+    <Content Include="Views\QuanTriVien\DangNhap.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -285,10 +313,17 @@
     <Folder Include="Content\HinhAnh\LopHoc\" />
     <Folder Include="Content\HinhAnh\TaiLieu\" />
     <Folder Include="Content\HinhAnh\ThanhToan\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Models\DataClasses1.dbml.layout">
+      <DependentUpon>DataClasses1.dbml</DependentUpon>
+    </None>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
