--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Web.config
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=152368
@@ -9,7 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-QL_TrungTamAnhNgu-20241115113150;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-QL_TrungTamAnhNgu-20241115113150.mdf" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-QL_TrungTamAnhNgu-20241115113150;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-QL_TrungTamAnhNgu-20241115113150.mdf"
+      providerName="System.Data.SqlClient" />
+    <add name="QL_TrungTamAnhNguConnectionString" connectionString="Data Source=PHAMTHUAN\MSSQLSERVER01;Initial Catalog=QL_TrungTamAnhNgu;Persist Security Info=True;User ID=sa;Password=123"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -74,6 +77,12 @@
     </handlers>
   </system.webServer>
   <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="QL_TrungTamAnhNgu" publicKeyToken="null" culture="neutral"/>
+        <codeBase version="1.0.0.0" href="file:///C:/path/to/your/dll/QL_TrungTamAnhNgu.dll"/>
+      </dependentAssembly>
+    </assemblyBinding>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
