--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu.csproj
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu.csproj
@@ -20,6 +20,8 @@
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
+    <Use64BitIISExpress />
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -138,6 +140,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DataClasses1.dbml</DependentUpon>
     </Compile>
+    <Compile Include="Models\QuanTriVienModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -168,14 +171,17 @@
     <Content Include="Content\bootstrap-5.0.2-dist\js\bootstrap.esm.min.js" />
     <Content Include="Content\bootstrap-5.0.2-dist\js\bootstrap.js" />
     <Content Include="Content\bootstrap-5.0.2-dist\js\bootstrap.min.js" />
+    <Content Include="Content\HinhAnh\GiaoDien\avatar.jpg" />
     <Content Include="Content\HinhAnh\GiaoDien\bell.png" />
     <Content Include="Content\HinhAnh\GiaoDien\DangNhap.png" />
     <Content Include="Content\HinhAnh\GiaoDien\fb.jpg" />
     <Content Include="Content\HinhAnh\GiaoDien\github.png" />
+    <Content Include="Content\HinhAnh\GiaoDien\iconCourse.png" />
     <Content Include="Content\HinhAnh\GiaoDien\iconSidebar\iconDetail.png" />
     <Content Include="Content\HinhAnh\GiaoDien\iconSidebar\iconSideBar.png" />
     <Content Include="Content\HinhAnh\GiaoDien\iconSidebar\iconSideBar10.png" />
     <Content Include="Content\HinhAnh\GiaoDien\iconSidebar\iconSideBar11.png" />
+    <Content Include="Content\HinhAnh\GiaoDien\iconSidebar\iconSIdeBar12.png" />
     <Content Include="Content\HinhAnh\GiaoDien\iconSidebar\iconSideBar3.png" />
     <Content Include="Content\HinhAnh\GiaoDien\iconSidebar\iconSideBar4.png" />
     <Content Include="Content\HinhAnh\GiaoDien\iconSidebar\iconSideBar5.png" />
@@ -183,13 +189,22 @@
     <Content Include="Content\HinhAnh\GiaoDien\iconSidebar\iconSideBar7.png" />
     <Content Include="Content\HinhAnh\GiaoDien\iconSidebar\iconSidebar8.png" />
     <Content Include="Content\HinhAnh\GiaoDien\iconSidebar\iconSideBar9.png" />
+    <Content Include="Content\HinhAnh\GiaoDien\iconSidebar\yola-english-high-resolution-logo.jpg" />
+    <Content Include="Content\HinhAnh\GiaoDien\iconStudent.png" />
+    <Content Include="Content\HinhAnh\GiaoDien\iconTeacher.png" />
     <Content Include="Content\HinhAnh\GiaoDien\linkedin.jpg" />
     <Content Include="Content\HinhAnh\GiaoDien\QuanTriVienJS.js" />
     <Content Include="Content\HinhAnh\GiaoDien\QuanTriVienStyle.css" />
+    <Content Include="Content\HinhAnh\GiaoDien\right-arrow.png" />
     <Content Include="Content\HinhAnh\GiaoDien\twitter.png" />
     <Content Include="Content\HinhAnh\GiaoDien\user.png" />
     <Content Include="Content\HinhAnh\GiaoDien\yola-english-high-resolution-logo.png" />
     <Content Include="Content\HinhAnh\GiaoDien\youtube.jpg" />
+    <Content Include="Content\HinhAnh\KhoaHoc\khoahoc_1.png" />
+    <Content Include="Content\HinhAnh\KhoaHoc\khoahoc_2.png" />
+    <Content Include="Content\HinhAnh\KhoaHoc\khoahoc_3.png" />
+    <Content Include="Content\HinhAnh\KhoaHoc\khoahoc_4.png" />
+    <Content Include="Content\HinhAnh\KhoaHoc\khoahoc_5.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -274,6 +289,9 @@
       <LastGenOutput>DataClasses1.designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </Content>
+    <None Include="Models\DataClasses1.dbml.layout">
+      <DependentUpon>DataClasses1.dbml</DependentUpon>
+    </None>
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
@@ -304,12 +322,20 @@
     <Content Include="Views\Shared\_LayoutQuanTriVien.cshtml" />
     <Content Include="Views\QuanTriVien\Index.cshtml" />
     <Content Include="Views\QuanTriVien\DangNhap.cshtml" />
+    <Content Include="Views\QuanTriVien\GetDangKyTheoThang.cshtml" />
+    <Content Include="Views\QuanTriVien\GetLopHocTrungTam.cshtml" />
+    <Content Include="Views\QuanTriVien\GetDoanhThuTheoThang.cshtml" />
+    <Content Include="Views\QuanTriVien\GetThongKeSoTuoi.cshtml" />
+    <Content Include="Views\QuanTriVien\GetThongKeGioiTinh.cshtml" />
+    <Content Include="Views\QuanTriVien\DanhSachKhoaHoc.cshtml" />
+    <Content Include="Views\QuanTriVien\TimKiemKhoaHoc.cshtml" />
+    <Content Include="Views\QuanTriVien\ChiTietKhoaHoc.cshtml" />
+    <Content Include="Views\QuanTriVien\DanhSachKhoaHocThamKhao.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Content\HinhAnh\DangKy_BaiTap\" />
     <Folder Include="Content\HinhAnh\GiamGia\" />
-    <Folder Include="Content\HinhAnh\KhoaHoc\" />
     <Folder Include="Content\HinhAnh\LopHoc\" />
     <Folder Include="Content\HinhAnh\TaiLieu\" />
     <Folder Include="Content\HinhAnh\ThanhToan\" />
@@ -319,11 +345,6 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Models\DataClasses1.dbml.layout">
-      <DependentUpon>DataClasses1.dbml</DependentUpon>
-    </None>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
