--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Web.config
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Web.config
@@ -11,7 +11,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-QL_TrungTamAnhNgu-20241115113150;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-QL_TrungTamAnhNgu-20241115113150.mdf"
       providerName="System.Data.SqlClient" />
-    <add name="QL_TrungTamAnhNguConnectionString" connectionString="Data Source=PHAMTHUAN\MSSQLSERVER01;Initial Catalog=QL_TrungTamAnhNgu;Persist Security Info=True;User ID=sa;Password=123"
+    <add name="QL_TrungTamAnhNguConnectionString" connectionString="Data Source=PHAMTHUAN\MSSQLSERVER01;Initial Catalog=QL_TrungTamAnhNgu;Persist Security Info=True;User ID=sa;Password=123;Encrypt=False"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
@@ -22,6 +22,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+
     <httpRuntime targetFramework="4.5" />
     <compilation debug="true" targetFramework="4.5" />
     <authentication mode="Forms">
