--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu.csproj
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu.csproj
@@ -138,6 +138,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DataClasses1.dbml</DependentUpon>
     </Compile>
+    <Compile Include="ViewModel\BangDiem.cs" />
     <Compile Include="ViewModel\HocVien_DiemDanh.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -261,6 +262,7 @@
       <LastGenOutput>DataClasses1.designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="Content\HinhAnh\DangKy_BaiTap\File_BT002_DK001.pdf" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
@@ -298,10 +300,16 @@
     <Content Include="Views\GiangVien\HocVien.cshtml" />
     <Content Include="Views\GiangVien\DiemDanh.cshtml" />
     <Content Include="Views\GiangVien\CapNhatDiemDanh.cshtml" />
+    <Content Include="Views\GiangVien\ChamDiem.cshtml" />
+    <Content Include="Views\GiangVien\ChamDiemBaiTap.cshtml" />
+    <Content Include="Views\GiangVien\BangDiem.cshtml" />
+    <Content Include="Views\GiangVien\ThongTinNguoiDung.cshtml" />
+    <Content Include="Views\GiangVien\LichGiangDay.cshtml" />
+    <Content Include="Views\GiangVien\LichHoc.cshtml" />
+    <Content Include="Views\GiangVien\TimKiem.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Content\HinhAnh\DangKy_BaiTap\" />
     <Folder Include="Content\HinhAnh\GiamGia\" />
     <Folder Include="Content\HinhAnh\KhoaHoc\" />
     <Folder Include="Content\HinhAnh\LopHoc\" />
