--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu.csproj
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -132,6 +133,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\DataClasses1.designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DataClasses1.dbml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -139,6 +145,7 @@
     <Content Include="Content\HinhAnh\Avatar\avt2.jfif" />
     <Content Include="Content\HinhAnh\Avatar\avt3.jfif" />
     <Content Include="Content\HinhAnh\Avatar\avt4.jfif" />
+    <Content Include="Content\HinhAnh\Avatar\DangNhap.png" />
     <Content Include="Content\HinhAnh\Avatar\user.png" />
     <Content Include="Content\bootstrap-5.0.2-dist\css\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-5.0.2-dist\css\bootstrap-grid.min.css" />
@@ -170,6 +177,11 @@
     <Content Include="Content\HinhAnh\GiaoDien\user.png" />
     <Content Include="Content\HinhAnh\GiaoDien\yola-english-high-resolution-logo.png" />
     <Content Include="Content\HinhAnh\GiaoDien\youtube.jpg" />
+    <Content Include="Content\HinhAnh\KhoaHoc\GiaoTiepCoBan.jpg" />
+    <Content Include="Content\HinhAnh\KhoaHoc\GiaoTiepNangCao.jpg" />
+    <Content Include="Content\HinhAnh\KhoaHoc\GiaoTiepQuocTe.jpg" />
+    <Content Include="Content\HinhAnh\KhoaHoc\LuyenThi_IELTS.jpg" />
+    <Content Include="Content\HinhAnh\KhoaHoc\LuyenThi_Toeic.jpg" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -249,6 +261,11 @@
     <Content Include="Content\bootstrap-5.0.2-dist\js\bootstrap.js.map" />
     <Content Include="Content\bootstrap-5.0.2-dist\js\bootstrap.min.js.map" />
     <Content Include="Content\HinhAnh\BaiTap\Chuong 4_Bao mat va an toan du lieu_Full.pdf" />
+    <Content Include="Models\DataClasses1.dbml">
+      <Generator>MSLinqToSQLGenerator</Generator>
+      <LastGenOutput>DataClasses1.designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
@@ -276,19 +293,35 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\Shared\_LayoutHocVien.cshtml" />
+    <Content Include="Views\HocVien\TrangChu.cshtml" />
+    <Content Include="Views\HocVien\LopHoc.cshtml" />
+    <Content Include="Views\HocVien\DangNhap.cshtml" />
+    <Content Include="Views\HocVien\ChuyenCan.cshtml" />
+    <Content Include="Views\HocVien\TaiLieu.cshtml" />
+    <Content Include="Views\HocVien\ChiTietTaiLieu.cshtml" />
+    <Content Include="Views\HocVien\BaiTap.cshtml" />
+    <Content Include="Views\HocVien\ChiTietBaiTap.cshtml" />
+    <Content Include="Views\HocVien\ChiTietLichHoc.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Content\HinhAnh\DangKy_BaiTap\" />
     <Folder Include="Content\HinhAnh\GiamGia\" />
-    <Folder Include="Content\HinhAnh\KhoaHoc\" />
     <Folder Include="Content\HinhAnh\LopHoc\" />
     <Folder Include="Content\HinhAnh\TaiLieu\" />
     <Folder Include="Content\HinhAnh\ThanhToan\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Models\DataClasses1.dbml.layout">
+      <DependentUpon>DataClasses1.dbml</DependentUpon>
+    </None>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
