--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu.csproj
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu.csproj
@@ -205,6 +205,7 @@
     <Content Include="Content\HinhAnh\KhoaHoc\khoahoc_3.png" />
     <Content Include="Content\HinhAnh\KhoaHoc\khoahoc_4.png" />
     <Content Include="Content\HinhAnh\KhoaHoc\khoahoc_5.png" />
+    <Content Include="Content\HinhAnh\KhoaHoc\khoahoc_default.jpg" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -289,9 +290,6 @@
       <LastGenOutput>DataClasses1.designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </Content>
-    <None Include="Models\DataClasses1.dbml.layout">
-      <DependentUpon>DataClasses1.dbml</DependentUpon>
-    </None>
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
@@ -331,6 +329,21 @@
     <Content Include="Views\QuanTriVien\TimKiemKhoaHoc.cshtml" />
     <Content Include="Views\QuanTriVien\ChiTietKhoaHoc.cshtml" />
     <Content Include="Views\QuanTriVien\DanhSachKhoaHocThamKhao.cshtml" />
+    <Content Include="Views\QuanTriVien\QuanTriVien.cshtml" />
+    <Content Include="Views\QuanTriVien\TimKiemQuanTriVien.cshtml" />
+    <Content Include="Views\QuanTriVien\GiangVien.cshtml" />
+    <Content Include="Views\QuanTriVien\TimKiemGiangVien.cshtml" />
+    <Content Include="Views\QuanTriVien\HocVien.cshtml" />
+    <Content Include="Views\QuanTriVien\TimKiemHocVien.cshtml" />
+    <Content Include="Views\QuanTriVien\ChiTietQuanTriVien.cshtml" />
+    <Content Include="Views\QuanTriVien\ChiTietGiangVien.cshtml" />
+    <Content Include="Views\QuanTriVien\ThemKhoaHoc.cshtml" />
+    <Content Include="Views\QuanTriVien\ChiTietHocVien.cshtml" />
+    <Content Include="Views\QuanTriVien\DanhSachPhongHoc.cshtml" />
+    <Content Include="Views\QuanTriVien\TimKiemPhongHoc.cshtml" />
+    <Content Include="Views\QuanTriVien\ChiTietPhongHoc.cshtml" />
+    <Content Include="Views\QuanTriVien\ThemGiangVien.cshtml" />
+    <Content Include="Views\QuanTriVien\ThemHocVien.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -345,6 +358,11 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Models\DataClasses1.dbml.layout">
+      <DependentUpon>DataClasses1.dbml</DependentUpon>
+    </None>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
