--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu.csproj
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\BangDiem.cs" />
     <Compile Include="ViewModel\HocVien_DiemDanh.cs" />
+    <Compile Include="ViewModel\MaHoaMatKhau.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\HinhAnh\Avatar\avt1.jpg" />
@@ -351,6 +352,7 @@
     <Content Include="Views\QuanTriVien\ThongTinLopHoc.cshtml" />
     <Content Include="Views\QuanTriVien\HocVienLopHoc.cshtml" />
     <Content Include="Views\QuanTriVien\DiemDanh.cshtml" />
+    <Content Include="Views\QuanTriVien\ThemQuanTriVien.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
