--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu.csproj
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu.csproj
@@ -144,7 +144,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\BangDiem.cs" />
     <Compile Include="ViewModel\HocVien_DiemDanh.cs" />
-    <Compile Include="ViewModel\MaHoaMatKhau.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\HinhAnh\Avatar\avt1.jpg" />
@@ -353,6 +352,13 @@
     <Content Include="Views\QuanTriVien\HocVienLopHoc.cshtml" />
     <Content Include="Views\QuanTriVien\DiemDanh.cshtml" />
     <Content Include="Views\QuanTriVien\ThemQuanTriVien.cshtml" />
+    <Content Include="Views\QuanTriVien\test.cshtml" />
+    <Content Include="Views\QuanTriVien\QuanLyNhomND.cshtml" />
+    <Content Include="Views\QuanTriVien\SuaQuyen.cshtml" />
+    <Content Include="Views\QuanTriVien\ThemNhomNguoiDung.cshtml" />
+    <Content Include="Views\QuanTriVien\TaoDangKy.cshtml" />
+    <Content Include="Views\QuanTriVien\QuanLyThanhToan.cshtml" />
+    <Content Include="Views\QuanTriVien\XacNhanThanhToan.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
