--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu.csproj
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\BangDiem.cs" />
     <Compile Include="ViewModel\HocVien_DiemDanh.cs" />
+    <Compile Include="ViewModel\MaHoaMatKhau.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\HinhAnh\Avatar\avt1.jpg" />
@@ -292,8 +293,6 @@
       <LastGenOutput>DataClasses1.designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="Content\HinhAnh\TaiLieu\Chuong 3_Function.pdf" />
-    <Content Include="Content\HinhAnh\TaiLieu\github-git-cheat-sh.pdf" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
@@ -354,26 +353,13 @@
     <Content Include="Views\QuanTriVien\HocVienLopHoc.cshtml" />
     <Content Include="Views\QuanTriVien\DiemDanh.cshtml" />
     <Content Include="Views\QuanTriVien\ThemQuanTriVien.cshtml" />
-    <Content Include="Views\QuanTriVien\ThemPhongHoc.cshtml" />
-    <Content Include="Views\QuanTriVien\DanhSachTaiLieu.cshtml" />
-    <Content Include="Views\QuanTriVien\ChiTietTaiLieu.cshtml" />
-    <Content Include="Views\QuanTriVien\DanhSachTaiLieuThuocKhoaHoc.cshtml" />
-    <Content Include="Views\QuanTriVien\ThemKhoaHoc_TaiLieu.cshtml" />
-    <Content Include="Views\QuanTriVien\ViewDanhSachTaiLieu.cshtml" />
-    <Content Include="Views\QuanTriVien\ThemTaiLieu.cshtml" />
-    <Content Include="Views\QuanTriVien\DanhSachMaGiamGia.cshtml" />
-    <Content Include="Views\QuanTriVien\TimKiemTaiLieu.cshtml" />
-    <Content Include="Views\QuanTriVien\TimKiemGiamGia.cshtml" />
-    <Content Include="Views\QuanTriVien\ThemGiamGia.cshtml" />
-    <Content Include="Views\QuanTriVien\ChiTietGiamGia.cshtml" />
-    <Content Include="Views\QuanTriVien\DanhSachGiamGiaThuocKhoaHoc.cshtml" />
-    <Content Include="Views\QuanTriVien\ThemKhoaHoc_GiamGia.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Content\HinhAnh\DangKy_BaiTap\" />
     <Folder Include="Content\HinhAnh\GiamGia\" />
     <Folder Include="Content\HinhAnh\LopHoc\" />
+    <Folder Include="Content\HinhAnh\TaiLieu\" />
     <Folder Include="Content\HinhAnh\ThanhToan\" />
   </ItemGroup>
   <ItemGroup>
