--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Web.config
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Web.config
@@ -17,6 +17,8 @@
       providerName="System.Data.SqlClient" />
     <add name="QL_TrungTamAnhNguConnectionString2" connectionString="Data Source=THAIBINH-LAPTOP;Initial Catalog=QL_TrungTamAnhNgu;User ID=sa;Password=sa123"
       providerName="System.Data.SqlClient" />
+    <add name="QL_TrungTamAnhNguConnectionString3" connectionString="Data Source=PHAMTHUAN\MSSQLSERVER01;Initial Catalog=QL_TrungTamAnhNgu;User ID=sa;Password=123"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -30,8 +32,8 @@
     <httpRuntime targetFramework="4.5" />
     <compilation debug="true" targetFramework="4.5" >
       <assemblies>
-        <add assembly="System.Data.Linq, Version=2.0.0.0, Culture=neutral, 
-            PublicKeyToken=b77a5c561934e089"/>
+        <add assembly="System.Data.Linq, Version=2.0.0.0, Culture=neutral, &#xD;&#xA;            PublicKeyToken=b77a5c561934e089"
+                                            />
       </assemblies>
     </compilation>
     <authentication mode="Forms">
