--- a/QL_TrungTamAnhNgu/Web.config
+++ b/QL_TrungTamAnhNgu/Web.config
@@ -9,10 +9,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-QL_TrungTamAnhNgu-20241115113150;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-QL_TrungTamAnhNgu-20241115113150.mdf"
-      providerName="System.Data.SqlClient" />
-    <add name="QL_TrungTamAnhNguConnectionString" connectionString="Data Source=MSI;Initial Catalog=QL_TrungTamAnhNgu;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+      <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-QL_TrungTamAnhNgu-20241115113150;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-QL_TrungTamAnhNgu-20241115113150.mdf"
+          providerName="System.Data.SqlClient" />
+      
+      <add name="QL_TrungTamAnhNguConnectionString1" connectionString="Data Source=MSI\MSSQLSERVER01;Initial Catalog=QL_TrungTamAnhNgu;User ID=sa;Password=123"
+          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -25,7 +26,7 @@
     <httpRuntime targetFramework="4.5" />
     <compilation debug="true" targetFramework="4.5" />
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login" timeout="2880" />
+      <forms loginUrl="~/HocVien/DangNhap" timeout="2880" />
     </authentication>
     <pages>
       <namespaces>
