--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Web.config
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Web.config
@@ -11,7 +11,8 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-QL_TrungTamAnhNgu-20241115113150;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-QL_TrungTamAnhNgu-20241115113150.mdf"
       providerName="System.Data.SqlClient" />
-    <add name="QL_TrungTamAnhNguConnectionString" connectionString="Data Source=MSI;Initial Catalog=QL_TrungTamAnhNgu;Integrated Security=True"
+   
+    <add name="QL_TrungTamAnhNguConnectionString1" connectionString="Data Source=THAIBINH-LAPTOP;Initial Catalog=QL_TrungTamAnhNgu;User ID=sa;Password=sa123"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
