--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Web.config
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Web.config
@@ -39,7 +39,7 @@
       </assemblies>
     </compilation>
     <authentication mode="Forms">
-      <forms loginUrl="~/QuanTriVien/DangXuat" timeout="2880" />
+      <forms loginUrl="~/Home/Index" timeout="2880" />
     </authentication>
     <pages>
       <namespaces>
