--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu.csproj
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu.csproj
@@ -144,6 +144,9 @@
     <Content Include="Content\HinhAnh\Avatar\avt2.jfif" />
     <Content Include="Content\HinhAnh\Avatar\avt3.jfif" />
     <Content Include="Content\HinhAnh\Avatar\avt4.jfif" />
+    <Content Include="Content\HinhAnh\Avatar\DangNhap.png" />
+    <Content Include="Content\HinhAnh\Avatar\Default_Avatar.png" />
+    <Content Include="Content\HinhAnh\Avatar\t.jpg" />
     <Content Include="Content\HinhAnh\Avatar\user.png" />
     <Content Include="Content\bootstrap-5.0.2-dist\css\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-5.0.2-dist\css\bootstrap-grid.min.css" />
@@ -285,6 +288,8 @@
     <Content Include="Content\bootstrap-5.0.2-dist\js\bootstrap.js.map" />
     <Content Include="Content\bootstrap-5.0.2-dist\js\bootstrap.min.js.map" />
     <Content Include="Content\HinhAnh\BaiTap\Chuong 4_Bao mat va an toan du lieu_Full.pdf" />
+    <Content Include="Content\HinhAnh\TaiLieu\Chuong 3_Function.pdf" />
+    <Content Include="Content\HinhAnh\TaiLieu\github-git-cheat-sh.pdf" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
@@ -312,25 +317,100 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Shared\_LayoutQuanTriVien.cshtml" />
-    <Content Include="Views\QuanTriVien\Index.cshtml" />
-    <Content Include="Views\QuanTriVien\DangNhap.cshtml" />
-    <Content Include="Views\QuanTriVien\GetDangKyTheoThang.cshtml" />
-    <Content Include="Views\QuanTriVien\GetLopHocTrungTam.cshtml" />
-    <Content Include="Views\QuanTriVien\GetDoanhThuTheoThang.cshtml" />
-    <Content Include="Views\QuanTriVien\GetThongKeSoTuoi.cshtml" />
-    <Content Include="Views\QuanTriVien\GetThongKeGioiTinh.cshtml" />
-    <Content Include="Views\QuanTriVien\DanhSachKhoaHoc.cshtml" />
-    <Content Include="Views\QuanTriVien\TimKiemKhoaHoc.cshtml" />
+    <Content Include="Views\QuanTriVien\ChiTietGiamGia.cshtml" />
+    <Content Include="Views\QuanTriVien\ChiTietGiangVien.cshtml" />
+    <Content Include="Views\QuanTriVien\ChiTietHocVien.cshtml" />
     <Content Include="Views\QuanTriVien\ChiTietKhoaHoc.cshtml" />
+    <Content Include="Views\QuanTriVien\ChiTietLopHoc.cshtml" />
+    <Content Include="Views\QuanTriVien\ChiTietPhongHoc.cshtml" />
+    <Content Include="Views\QuanTriVien\ChiTietQuanTriVien.cshtml" />
+    <Content Include="Views\QuanTriVien\ChiTietTaiLieu.cshtml" />
+    <Content Include="Views\QuanTriVien\DangNhap.cshtml" />
+    <Content Include="Views\QuanTriVien\DanhSachGiamGiaThuocKhoaHoc.cshtml" />
+    <Content Include="Views\QuanTriVien\DanhSachKhoaHoc.cshtml" />
     <Content Include="Views\QuanTriVien\DanhSachKhoaHocThamKhao.cshtml" />
+    <Content Include="Views\QuanTriVien\DanhSachLopHoc.cshtml" />
+    <Content Include="Views\QuanTriVien\DanhSachMaGiamGIa.cshtml" />
+    <Content Include="Views\QuanTriVien\DanhSachPhongHoc.cshtml" />
+    <Content Include="Views\QuanTriVien\DanhSachTaiLieu.cshtml" />
+    <Content Include="Views\QuanTriVien\DanhSachTaiLieuThuocKhoaHoc.cshtml" />
+    <Content Include="Views\QuanTriVien\DiemDanh.cshtml" />
+    <Content Include="Views\QuanTriVien\GetDangKyTheoThang.cshtml" />
+    <Content Include="Views\QuanTriVien\GetDoanhThuTheoThang.cshtml" />
+    <Content Include="Views\QuanTriVien\GetLopHocTrungTam.cshtml" />
+    <Content Include="Views\QuanTriVien\GetThongKeGioiTinh.cshtml" />
+    <Content Include="Views\QuanTriVien\GetThongKeSoTuoi.cshtml" />
+    <Content Include="Views\QuanTriVien\GiangVien.cshtml" />
+    <Content Include="Views\QuanTriVien\HocVien.cshtml" />
+    <Content Include="Views\QuanTriVien\HocVienLopHoc.cshtml" />
+    <Content Include="Views\QuanTriVien\Index.cshtml" />
+    <Content Include="Views\QuanTriVien\PhanQuyen.cshtml" />
+    <Content Include="Views\QuanTriVien\QuanLyNhomND.cshtml" />
+    <Content Include="Views\QuanTriVien\QuanLyThanhToan.cshtml" />
+    <Content Include="Views\QuanTriVien\QuanTriVien.cshtml" />
+    <Content Include="Views\QuanTriVien\SuaQuyen.cshtml" />
+    <Content Include="Views\QuanTriVien\TaoDangKy.cshtml" />
+    <Content Include="Views\QuanTriVien\test.cshtml" />
+    <Content Include="Views\QuanTriVien\ThemGiamGia.cshtml" />
+    <Content Include="Views\QuanTriVien\ThemGiangVien.cshtml" />
+    <Content Include="Views\QuanTriVien\ThemHocVien.cshtml" />
+    <Content Include="Views\QuanTriVien\ThemKhoaHoc.cshtml" />
+    <Content Include="Views\QuanTriVien\ThemKhoaHoc_GiamGia.cshtml" />
+    <Content Include="Views\QuanTriVien\ThemKhoaHoc_TaiLieu.cshtml" />
+    <Content Include="Views\QuanTriVien\ThemLopHoc.cshtml" />
+    <Content Include="Views\QuanTriVien\ThemNhomNguoiDung.cshtml" />
+    <Content Include="Views\QuanTriVien\ThemPhongHoc.cshtml" />
+    <Content Include="Views\QuanTriVien\ThemQuanTriVien.cshtml" />
+    <Content Include="Views\QuanTriVien\ThemTaiLieu.cshtml" />
+    <Content Include="Views\QuanTriVien\ThongTinLopHoc.cshtml" />
+    <Content Include="Views\QuanTriVien\TimKiemGiamGia.cshtml" />
+    <Content Include="Views\QuanTriVien\TimKiemGiangVien.cshtml" />
+    <Content Include="Views\QuanTriVien\TimKiemHocVien.cshtml" />
+    <Content Include="Views\QuanTriVien\TimKiemKhoaHoc.cshtml" />
+    <Content Include="Views\QuanTriVien\TimKiemPhongHoc.cshtml" />
+    <Content Include="Views\QuanTriVien\TimKiemQuanTriVien.cshtml" />
+    <Content Include="Views\QuanTriVien\TimKiemTaiLieu.cshtml" />
+    <Content Include="Views\QuanTriVien\ViewDanhSachTaiLieu.cshtml" />
+    <Content Include="Views\QuanTriVien\XacNhanThanhToan.cshtml" />
+    <Content Include="Views\HocVien\BaiTap.cshtml" />
+    <Content Include="Views\HocVien\ChiTietBaiTap.cshtml" />
+    <Content Include="Views\HocVien\ChiTietLichHoc.cshtml" />
+    <Content Include="Views\HocVien\ChiTietTaiLieu.cshtml" />
+    <Content Include="Views\HocVien\ChuyenCan.cshtml" />
+    <Content Include="Views\HocVien\DangNhap.cshtml" />
+    <Content Include="Views\HocVien\LopHoc.cshtml" />
+    <Content Include="Views\HocVien\LopHocCuaToi.cshtml" />
+    <Content Include="Views\HocVien\NopBaiTap.cshtml" />
+    <Content Include="Views\HocVien\TaiLieu.cshtml" />
+    <Content Include="Views\HocVien\ThanhToan.cshtml" />
+    <Content Include="Views\HocVien\ThongTinNguoiDung.cshtml" />
+    <Content Include="Views\HocVien\TrangChu.cshtml" />
+    <Content Include="Views\GiangVien\BangDiem.cshtml" />
+    <Content Include="Views\GiangVien\CapNhatDiemDanh.cshtml" />
+    <Content Include="Views\GiangVien\ChamDiem.cshtml" />
+    <Content Include="Views\GiangVien\ChamDiemBaiTap.cshtml" />
+    <Content Include="Views\GiangVien\ChiTietLopHoc.cshtml" />
+    <Content Include="Views\GiangVien\DangNhap.cshtml" />
+    <Content Include="Views\GiangVien\DiemDanh.cshtml" />
+    <Content Include="Views\GiangVien\HocVien.cshtml" />
+    <Content Include="Views\GiangVien\Index.cshtml" />
+    <Content Include="Views\GiangVien\LichGiangDay.cshtml" />
+    <Content Include="Views\GiangVien\LichHoc.cshtml" />
+    <Content Include="Views\GiangVien\LopHocCuaToi.cshtml" />
+    <Content Include="Views\GiangVien\Test.cshtml" />
+    <Content Include="Views\GiangVien\ThongTin.cshtml" />
+    <Content Include="Views\GiangVien\ThongTinNguoiDung.cshtml" />
+    <Content Include="Views\GiangVien\TimKiem.cshtml" />
+    <Content Include="Views\Shared\_LayoutGiangVien.cshtml" />
+    <Content Include="Views\Shared\_LayoutHocVien.cshtml" />
+    <Content Include="Views\Shared\_LayoutQuanTriVien.cshtml" />
+    <Content Include="Views\Home\DieuHuong.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Content\HinhAnh\DangKy_BaiTap\" />
     <Folder Include="Content\HinhAnh\GiamGia\" />
     <Folder Include="Content\HinhAnh\LopHoc\" />
-    <Folder Include="Content\HinhAnh\TaiLieu\" />
     <Folder Include="Content\HinhAnh\ThanhToan\" />
   </ItemGroup>
   <ItemGroup>
