--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu.csproj
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu.csproj
@@ -329,19 +329,6 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\HocVien\BaiTap.cshtml" />
-    <Content Include="Views\HocVien\ChiTietBaiTap.cshtml" />
-    <Content Include="Views\HocVien\ChiTietLichHoc.cshtml" />
-    <Content Include="Views\HocVien\ChiTietTaiLieu.cshtml" />
-    <Content Include="Views\HocVien\ChuyenCan.cshtml" />
-    <Content Include="Views\HocVien\DangNhap.cshtml" />
-    <Content Include="Views\HocVien\LopHoc.cshtml" />
-    <Content Include="Views\HocVien\LopHocCuaToi.cshtml" />
-    <Content Include="Views\HocVien\NopBaiTap.cshtml" />
-    <Content Include="Views\HocVien\TaiLieu.cshtml" />
-    <Content Include="Views\HocVien\ThanhToan.cshtml" />
-    <Content Include="Views\HocVien\ThongTinNguoiDung.cshtml" />
-    <Content Include="Views\HocVien\TrangChu.cshtml" />
     <Content Include="Views\GiangVien\BangDiem.cshtml" />
     <Content Include="Views\GiangVien\CapNhatDiemDanh.cshtml" />
     <Content Include="Views\GiangVien\ChamDiem.cshtml" />
@@ -362,18 +349,27 @@
     <Content Include="Views\Shared\_LayoutHocVien.cshtml" />
     <Content Include="Views\Shared\_LayoutQuanTriVien.cshtml" />
     <Content Include="Views\Home\DieuHuong.cshtml" />
+    <Content Include="Views\QuanTriVien\ChamDiem.cshtml" />
+    <Content Include="Views\QuanTriVien\ChiTietBaiTap.cshtml" />
     <Content Include="Views\QuanTriVien\ChiTietGiamGia.cshtml" />
     <Content Include="Views\QuanTriVien\ChiTietGiangVien.cshtml" />
     <Content Include="Views\QuanTriVien\ChiTietHocVien.cshtml" />
     <Content Include="Views\QuanTriVien\ChiTietKhoaHoc.cshtml" />
+    <Content Include="Views\QuanTriVien\ChiTietLichHoc.cshtml" />
     <Content Include="Views\QuanTriVien\ChiTietLopHoc.cshtml" />
     <Content Include="Views\QuanTriVien\ChiTietPhongHoc.cshtml" />
     <Content Include="Views\QuanTriVien\ChiTietQuanTriVien.cshtml" />
     <Content Include="Views\QuanTriVien\ChiTietTaiLieu.cshtml" />
+    <Content Include="Views\QuanTriVien\ChiTietThanhToan.cshtml" />
+    <Content Include="Views\QuanTriVien\ChuaChamDiem.cshtml" />
     <Content Include="Views\QuanTriVien\DangNhap.cshtml" />
+    <Content Include="Views\QuanTriVien\DanhSachBaiTap.cshtml" />
+    <Content Include="Views\QuanTriVien\DanhSachBaiTapKhoaHoc.cshtml" />
+    <Content Include="Views\QuanTriVien\DanhSachBaiTapThuocKhoaHoc.cshtml" />
     <Content Include="Views\QuanTriVien\DanhSachGiamGiaThuocKhoaHoc.cshtml" />
     <Content Include="Views\QuanTriVien\DanhSachKhoaHoc.cshtml" />
     <Content Include="Views\QuanTriVien\DanhSachKhoaHocThamKhao.cshtml" />
+    <Content Include="Views\QuanTriVien\DanhSachLichHoc.cshtml" />
     <Content Include="Views\QuanTriVien\DanhSachLopHoc.cshtml" />
     <Content Include="Views\QuanTriVien\DanhSachMaGiamGIa.cshtml" />
     <Content Include="Views\QuanTriVien\DanhSachPhongHoc.cshtml" />
@@ -396,18 +392,22 @@
     <Content Include="Views\QuanTriVien\SuaQuyen.cshtml" />
     <Content Include="Views\QuanTriVien\TaoDangKy.cshtml" />
     <Content Include="Views\QuanTriVien\test.cshtml" />
+    <Content Include="Views\QuanTriVien\ThemBaiTap.cshtml" />
     <Content Include="Views\QuanTriVien\ThemGiamGia.cshtml" />
     <Content Include="Views\QuanTriVien\ThemGiangVien.cshtml" />
     <Content Include="Views\QuanTriVien\ThemHocVien.cshtml" />
     <Content Include="Views\QuanTriVien\ThemKhoaHoc.cshtml" />
+    <Content Include="Views\QuanTriVien\ThemKhoaHoc_BaiTap.cshtml" />
     <Content Include="Views\QuanTriVien\ThemKhoaHoc_GiamGia.cshtml" />
     <Content Include="Views\QuanTriVien\ThemKhoaHoc_TaiLieu.cshtml" />
+    <Content Include="Views\QuanTriVien\ThemLichHoc.cshtml" />
     <Content Include="Views\QuanTriVien\ThemLopHoc.cshtml" />
     <Content Include="Views\QuanTriVien\ThemNhomNguoiDung.cshtml" />
     <Content Include="Views\QuanTriVien\ThemPhongHoc.cshtml" />
     <Content Include="Views\QuanTriVien\ThemQuanTriVien.cshtml" />
     <Content Include="Views\QuanTriVien\ThemTaiLieu.cshtml" />
     <Content Include="Views\QuanTriVien\ThongTinLopHoc.cshtml" />
+    <Content Include="Views\QuanTriVien\TimKiemBaiTap.cshtml" />
     <Content Include="Views\QuanTriVien\TimKiemGiamGia.cshtml" />
     <Content Include="Views\QuanTriVien\TimKiemGiangVien.cshtml" />
     <Content Include="Views\QuanTriVien\TimKiemHocVien.cshtml" />
@@ -417,6 +417,19 @@
     <Content Include="Views\QuanTriVien\TimKiemTaiLieu.cshtml" />
     <Content Include="Views\QuanTriVien\ViewDanhSachTaiLieu.cshtml" />
     <Content Include="Views\QuanTriVien\XacNhanThanhToan.cshtml" />
+    <Content Include="Views\HocVien\BaiTap.cshtml" />
+    <Content Include="Views\HocVien\ChiTietBaiTap.cshtml" />
+    <Content Include="Views\HocVien\ChiTietLichHoc.cshtml" />
+    <Content Include="Views\HocVien\ChiTietTaiLieu.cshtml" />
+    <Content Include="Views\HocVien\ChuyenCan.cshtml" />
+    <Content Include="Views\HocVien\DangNhap.cshtml" />
+    <Content Include="Views\HocVien\LopHoc.cshtml" />
+    <Content Include="Views\HocVien\LopHocCuaToi.cshtml" />
+    <Content Include="Views\HocVien\NopBaiTap.cshtml" />
+    <Content Include="Views\HocVien\TaiLieu.cshtml" />
+    <Content Include="Views\HocVien\ThanhToan.cshtml" />
+    <Content Include="Views\HocVien\ThongTinNguoiDung.cshtml" />
+    <Content Include="Views\HocVien\TrangChu.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
