--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Web.config
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Web.config
@@ -13,8 +13,6 @@
       providerName="System.Data.SqlClient" />
     <add name="QL_TrungTamAnhNguConnectionString" connectionString="Data Source=PHAMTHUAN\MSSQLSERVER01;Initial Catalog=QL_TrungTamAnhNgu;Persist Security Info=True;User ID=sa;Password=123;Encrypt=False"
       providerName="System.Data.SqlClient" />
-    <add name="QL_TrungTamAnhNguConnectionString1" connectionString="Data Source=THAIBINH-LAPTOP;Initial Catalog=QL_TrungTamAnhNgu;User ID=sa;Password=sa123"
-      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -66,7 +64,7 @@
             change the connection string named "DefaultConnection" to connect to an instance
             of SQL Server (including SQL Azure and SQL  Compact) instead of to SQL Server Express.
       -->
-    <customErrors mode="On" defaultRedirect="~/Error/General">
+    <customErrors mode="On" defaultRedirect="~/Error/NotFound">
       <error statusCode="404" redirect="~/Error/NotFound" />
     </customErrors>
     <sessionState mode="InProc" customProvider="DefaultSessionProvider">
